[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvisclaw"
version = "0.2.0"
description = "JarvisClaw AI SDK — Chat, Images, Video, Search, Prediction Market. Supports API Key and x402 Agent payments."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "sseclient-py>=1.7",
]

[project.optional-dependencies]
agent = ["eth-account>=0.10", "eth-abi>=4.0"]
async = ["httpx>=0.25"]
all = ["eth-account>=0.10", "eth-abi>=4.0", "httpx>=0.25"]
dev = ["pytest", "pytest-asyncio", "responses", "ruff"]

[project.urls]
Homepage = "https://jarvisclaw.ai"
Documentation = "https://api.jarvisclaw.ai/docs"
Repository = "https://github.com/api-jarvisclaw/python-sdk"
